--- a/src/app/components/map/map.component.css
+++ b/src/app/components/map/map.component.css
@@ -1,12 +1,9 @@
-.map-wrap {
-  position: relative;
-  width: 100%;
+:host {
   height: 100%;
-  border: 1px solid #aaa;
 }
 
 .map {
-  position: absolute;
+  border: 1px solid #aaa;
   width: 100%;
   height: 100%;
 }
